--- a/css/styles.css
+++ b/css/styles.css
@@ -265,7 +265,7 @@ h1,h2,h3,h4,h5,h6{
 
 .register-modal{
   position:fixed;inset:0;background:rgba(0,0,0,.7);
-  display:flex;justify-content:center;align-items:center;z-index:10000 !important;
+  display:flex;justify-content:center;align-items:center;z-index:9998;
   opacity:0;pointer-events:none;transition:opacity .5s ease;
 }
 .register-modal.active{opacity:1;pointer-events:auto}
@@ -1351,7 +1351,7 @@ textarea.form-control {
 }
 
 .selector-text {
-  color: #c9c2c2 !important; 
+  color: #ffffff !important; 
   font-weight: 600;
   font-size: 0.8rem;  
   text-align: center;
@@ -1359,11 +1359,11 @@ textarea.form-control {
 }
 
 .course-description {
-  color: #444242 !important; 
+  color: #242323 !important; 
 }
 
 .course-meta {
-  color: #5C5A5A !important;
+  color: #161616 !important;
 }
 
 .selector-text {
